<resources>
    <string name="app_name">Guess The Word</string>
    <string name="get_ready">Get ready to</string>
    <string name="guess_text">guess the word!</string>
    <string name="btn_play">PLAY</string>
    <string name="the_word_is">The word is</string>
    <string name="word">Word</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_gotIt">GOT IT</string>
    <string name="tv_scored">You scored!</string>
    <string name="btn_playAgain">Play again</string>
    <string name="str_format">\"%s\"</string>
    <string name="dig_format">Current score: %d</string>
</resources>