<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="gameViewModel"
            type="com.maxdexter.guesstheword.screens.game.GameViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/small_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/the_word_is"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />

        <TextView
            android:id="@+id/tv_guess_word"
            style="@style/big_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{@string/str_format(gameViewModel.word)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="@string/word" />

        <TextView
            android:id="@+id/tv_score"
            style="@style/small_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{@string/dig_format(gameViewModel.score)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_guess_word"
            tools:text="3" />

        <Button
            android:id="@+id/btn_skip"
            style="@style/green_btn"
            android:layout_margin="16dp"
            android:text="@string/btn_skip"
            android:onClick="@{() -> gameViewModel.onSkip()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_timer"
            style="@style/small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{gameViewModel.currentTimeString}"
            app:layout_constraintBottom_toTopOf="@+id/tv_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_guess_word"
            tools:text="0:99" />


        <Button
            android:id="@+id/btn_gotIt"
            style="@style/green_btn"
            android:layout_margin="16dp"
            android:text="@string/btn_gotIt"
            android:onClick="@{() -> gameViewModel.onCorrect()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
